# jjpred-project

./: .buildinfo  .gitignore  README.md  analysis_tools  genindex.html  index.html  makedocs.ps1  makedocs.sh  objects.inv  pushdocs.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js
jjpred/: TODO.md  analysisdefn.py  channel.py  columns.py  database.py  datagroups.py  dispatcher.py  dispatchformatter.py  globalpaths.py  globalvariables.py  inputstrategy.py  predictor.py  pyproject.toml  seasons.py  sku.py  skuinfo.py  strategies.py  structlike.py
jjpred/analyze/: histogram.py  instockratio.py  interactivity.py  peakmonths.py  peaksales.py  utils.py
jjpred/analyze/modelling/: gendemand.py  utils.py
jjpred/checks/: checkdispatch.py
jjpred/docs/: conf.py
jjpred/readsupport/: historic.py  instockratio.py  marketing.py  mastersku.py  nsinventory.py  predictiontypes.py  qtybox.py  refilldraft.py  utils.py
jjpred/scripting/: constants_2024_NOV_08_low_sales.py  constants_2024_NOV_11.py  constants_2024_NOV_11_qty_box_changes.py  constants_2024_NOV_25.py  constants_2024_OCT_21.py  constants_2024_OCT_28_overperformer_test.py  constants_2024_SEP_10.py  constants_ta_2024_DEC_02.py  constants_ta_2024_NOV_07.py  constants_ta_2024_NOV_20.py  constants_ta_2024_OCT_23.py  dateoffset.py  salestrends.py
jjpred/src/jjpred/: aggregator.py  analysisconfig.py  analysisdefn.py  channel.py  columns.py  countryflags.py  database.py  datagroups.py  dispatcher.py  dispatchformatter.py  eastwestfrac.py  globalpaths.py  globalvariables.py  inputstrategy.py  performanceflags.py  predictiontypes.py  predictor.py  readsheet.py  seasons.py  sku.py  skuinfo.py  strategies.py  strategy.py  strategylib.py  structlike.py
jjpred/src/jjpred/analyze/: interactivity.py  peaksales.py
jjpred/src/jjpred/checks/: checkdispatch.py
jjpred/src/jjpred/docs/: README.md  index_template
jjpred/src/jjpred/parse/: patternmatch.py
jjpred/src/jjpred/readsupport/: historic.py  instockratio.py  inventory.py  mainprogram.py  marketing.py  mastersku.py  nsinventory.py  po.py  predictiontypes.py  proportions.py  qtybox.py  refilldraft.py  utils.py  xoroinventory.py
jjpred/src/jjpred/scripting/: constants_2024_DEC_02.py  (+75 more)
jjpred/utils/: compare.py  datetime.py  excel.py  fileio.py  multidict.py  polars.py  profile.py
(+15 files in other folders)
