[project]
name = "jjpred-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "altair>=5.5.0",
  "analysis-tools",
  "fastexcel>=0.12.0",
  "great-tables>=0.17.0",
  "ipykernel>=6.29.5",
  "jjpred",
  "jupyter>=1.1.1",
  "kmedoids>=0.5.3",
  "notebook>=7.2.2",
  "numpy>=2.1.3",
  "openpyxl>=3.1.5",
  "polars==1.30.0",
  "pyodbc>=5.2.0",
  "quarto>=0.1.0",
  "scikit-learn>=1.6.0",
  "scipy>=1.14.1",
  "vega-datasets>=0.9.0",
  "vegafusion[embed]>=2.0.1",
  "xlsxwriter>=3.2.0",
]

[tool.uv.workspace]
members = ["jjpred", "analysis_tools"]

[tool.uv.sources]
jjpred = { workspace = true }
analysis-tools = { workspace = true }
